# tkg-solar-satellite-reasoning

./: .gitignore  KE_HOACH_CHUYEN_DKASC.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: paper_config.yaml  smoke_config.yaml  vn_real_2016.yaml  vn_real_2016_lstm.yaml
notebooks/: colab_eval_only.ipynb  colab_train.ipynb  data_pipeline_walkthrough.ipynb  results_analysis.ipynb
scripts/: build_dkasc_clean_csv.py  build_himawari_frames.py  download_dkasc.py  download_himawari.py  download_nsrdb.py  download_openmeteo.py  download_opsd.py  generate_synthetic_data.py  run_baselines.py
src/advanced_loss/: composite_loss.py  physics_informed_loss.py  probabilistic_loss.py
src/common/: seeding.py  shapes.py
src/data_pipeline/: __init__.py  cleaning.py  dataset.py  loaders.py  pipeline.py  scaling.py  splits.py  time_alignment.py  windowing.py
src/evaluation/: baseline_models.py  benchmark_table.py
src/fusion_predictor/: fusion_predictor.py  tkg_solar_model.py
src/graph_learner/: fourier_features.py  gat_layer.py  graph_learner.py  temporal_transformer.py
src/lstm_baseline/: lstm_forecaster.py
src/meteo_encoder/: meteo_encoder.py
src/metrics/: __init__.py  regression_metrics.py
src/satellite_encoder/: channel_adapter.py  satellite_encoder.py
src/tkg_builder/: adjacency_builder.py  entities.py  relations.py  (+1 more)
tests/: conftest.py  test_baselines_and_benchmark.py  test_data_pipeline.py  test_encoders.py  test_full_model.py  test_graph.py  test_himawari_bucket_routing.py  test_metrics.py  test_partial_unfreeze.py  test_skeleton_lstm.py
(+4 files in other folders)
