[project]
name = "tkg-solar-forecasting"
version = "0.1.0"
description = "Reproduction of 'Temporal Knowledge Graph Reasoning for Real-Time Solar Power Forecasting Using Satellite Data' (Hoang Duc Long, 2026)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "torch_geometric>=2.5",
    "timm>=0.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real-data acquisition helpers (optional — only needed to pull live Himawari/NSRDB).
data = [
    "satpy>=0.46",
    "requests>=2.31",
]
dev = [
    "pytest>=7.4",
]

# CPU-only torch wheels (no local GPU). Override on a CUDA box by removing this block.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
